--- a/css/styles.css
+++ b/css/styles.css
@@ -10986,7 +10986,7 @@ html {
 
 .callout {
   padding: 15rem 0;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../assets/img/bg-callout.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../assets/img/bg-eeg.jpg"); /* bg-callout.jpg */
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -11134,4 +11134,10 @@ footer.footer .social-link:hover {
   line-height: 7.5rem;
   font-size: 2.25rem;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+.center {
+  width: 50px;
+  height:50px;
+  display: inline-block;
 }
